# wakapedia-daily-news

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: daily-newsletter.yml  tests.yml
.serena/: project.yml
archives/: 2026-01-20.html
memory/: used_facts.json  used_news_urls.json  used_tools.json
src/wakapedia_daily_news_generator/: crew.py  google_chat_card.py  google_drive.py  main.py  pdf_generator.py
src/wakapedia_daily_news_generator/config/: agents.yaml  tasks.yaml
src/wakapedia_daily_news_generator/tools/: __init__.py  facts_memory_tool.py  news_memory_tool.py  rss_feed_tool.py  similarity_utils.py  tool_memory.py  tool_memory_tool.py  tools_memory_tool.py
tests/: __init__.py  conftest.py  test_extraction.py  test_google_chat_card.py  test_memory_tools.py  test_refusal_detection.py  test_rss_feed_tool.py
