[project]
name = "wakapedia_daily_news_generator"
version = "0.1.0"
description = "wakapedia_daily_news_generator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.7.2",
    "anthropic>=0.40.0",
    "requests>=2.31.0",
]

[project.scripts]
wakapedia_daily_news_generator = "wakapedia_daily_news_generator.main:run"
run_crew = "wakapedia_daily_news_generator.main:run"
train = "wakapedia_daily_news_generator.main:train"
replay = "wakapedia_daily_news_generator.main:replay"
test = "wakapedia_daily_news_generator.main:test"
run_with_trigger = "wakapedia_daily_news_generator.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
