[project]
name = "wakapedia_daily_news_generator"
version = "1.2.0"
description = "AI-powered daily tech newsletter generator using CrewAI multi-agent system"
authors = [{ name = "TH-SQUAD", email = "wakapedia@wakastellar.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.14"
keywords = ["newsletter", "ai", "crewai", "automation", "tech-news"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "crewai[litellm,tools]==1.9.3",
    "anthropic>=0.40.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
]

[project.scripts]
wakapedia_daily_news_generator = "wakapedia_daily_news_generator.main:main"
run_crew = "wakapedia_daily_news_generator.main:run"
train = "wakapedia_daily_news_generator.main:train"
replay = "wakapedia_daily_news_generator.main:replay"
test_crew = "wakapedia_daily_news_generator.main:test"

[project.urls]
Homepage = "https://github.com/waka-theo/wakapedia-daily-news"
Documentation = "https://github.com/waka-theo/wakapedia-daily-news#readme"
Repository = "https://github.com/waka-theo/wakapedia-daily-news"
Issues = "https://github.com/waka-theo/wakapedia-daily-news/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["wakapedia_daily_news_generator"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/wakapedia_daily_news_generator"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
